--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
         font-family: 'Zen Maru Gothic', sans-serif;
         background-color: #1a1a1a;
         color: #e5e5e5;
-        overscroll-behavior-y: none; /* Prevent bounce effect */
+        overscroll-behavior-y: none;
       }
       .font-serif {
         font-family: 'Shippori Mincho', serif;
       }
-      /* Custom scrollbar for webkit */
       ::-webkit-scrollbar {
         width: 6px;
       }
@@ -47,20 +46,27 @@
         to { opacity: 1; transform: translateY(0); }
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/"
-  }
-}
-</script>
-</head>
+    
+    <!-- Polyfill for process.env used by the Gemini SDK in browser environments -->
+    <script>
+      window.process = { env: { API_KEY: "" } };
+    </script>
+
+    <script type="importmap">
+    {
+      "imports": {
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+        "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+        "react": "https://esm.sh/react@^19.2.3",
+        "react/": "https://esm.sh/react@^19.2.3/"
+      }
+    }
+    </script>
+  </head>
   <body>
     <div id="root"></div>
+    <!-- Ensure relative path without leading slash for sub-directory hosting -->
     <script type="module" src="index.tsx"></script>
   </body>
 </html>
