--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
       #debug-overlay { position: fixed; top: 0; left: 0; width: 100%; z-index: 9999; pointer-events: none; }
       .error-msg { background: rgba(220, 38, 38, 0.95); color: white; padding: 15px; margin: 10px; border-radius: 8px; font-family: monospace; font-size: 13px; pointer-events: auto; white-space: pre-wrap; word-break: break-all; box-shadow: 0 4px 12px rgba(0,0,0,0.5); }
       #root { min-height: 100vh; }
+      @keyframes kenburns {
+        0% { transform: scale(1); }
+        100% { transform: scale(1.1); }
+      }
+      .animate-ken-burns { animation: kenburns 20s ease-in-out infinite alternate; }
+      .fade-in { animation: fadeIn 1s ease-out forwards; }
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .scrollbar-hide::-webkit-scrollbar { display: none; }
+      .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
     
     <script>
@@ -58,9 +70,10 @@
   <body>
     <div id="debug-overlay"></div>
     <div id="root">
-      <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; color: #666; background: #1a1a1a; font-family: sans-serif;">
-        <div style="margin-bottom: 20px; font-size: 1.1rem; color: #aaa;">庭園を整えています...</div>
-        <div style="font-size: 12px; color: #555;">読み込みに時間がかかる場合は、再読み込みをお試しください</div>
+      <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; color: #888; background: #1a1a1a; font-family: sans-serif;">
+        <div style="margin-bottom: 24px; font-size: 1.1rem; color: #aaa; letter-spacing: 0.1em;">庭園を整えています...</div>
+        <div style="width: 40px; height: 1px; background: #444; margin-bottom: 24px;"></div>
+        <div style="font-size: 11px; color: #555;">読み込みに時間がかかる場合は、再読み込みをお試しください</div>
       </div>
     </div>
     <script type="module" src="./index.tsx"></script>
